<resources>
    <string name="app_name">SMS Forward</string>
    <string name="delete_rule">删除规则</string>
    <string name="forward_settings">转发设置</string>
    <string name="forward_phone">转发手机号</string>
    <string name="save_settings">保存设置</string>
    <string name="forward_rules">转发规则</string>
    <string name="rule_pattern">匹配规则</string>
    <string name="use_regex">使用正则表达式</string>
    <string name="add_rule">添加规则</string>
    <string name="test_sms">发送测试短信</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="invalid_phone">请输入有效的手机号</string>
    <string name="save_success">保存成功</string>
    <string name="input_rule_hint">请输入匹配规则</string>
    <string name="save_failed">保存失败: %s</string>
</resources>